# ComfyUI-ComfyEnhancedMultiRegion

./: ComfyEnhancedMultiRegion.py  README.md  __init__.py  attention_couple.py  pyproject.toml
workflows/: MultiRegionalWorkflow.json
